--- a/app/views/pages/_yesterday_news.html.erb
+++ b/app/views/pages/_yesterday_news.html.erb
@@ -3,4 +3,6 @@
     <% @news.each do |daily| %>
     <%= raw("<p>#{daily}</p>") %>
     <% end %>
+    <div id="home-footer"><%= render 'shared/footer' -%></div>
 </div>
+
