--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,13 @@
+<div id="about">
+  <p>
+    <a href="http://crunchbase.com">CrunchBase</a> is an invaluable resource for all things tech startup. It's the go-to place to look up any company, person, or venture fund involved in the latest happenings of the startup world. You probably find yourself reading it everyday.
+  </p>
+  <p>
+    <%= link_to "CrunchAlert", root_path %> hopes to make it even easier for you to get the information you're looking for by sending you email alerts on the tech companies and people of interest to you. 
+  </p>
+  <p>
+    Just sign up, create your list, and we'll keep you posted with fresh updates.  
+  </p>
+</div>
 
-About
+<div id="page-footer"><%= render 'shared/footer' -%></div>
