user logins css

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -10,4 +10,4 @@
   </p>
 </div>
 
-<div id="page-footer"><%= render 'shared/footer' -%></div>
+<div class="page-footer"><%= render 'shared/footer' -%></div>
