--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-  <title>CrunchAlert | Email alerts on CrunchBase updates</title>
+  <title>CrunchAlert - Email alerts on CrunchBase updates</title>
   <meta name="description" content="Email alerts on CrunchBase updates from your favorite tech companies and people" />
   <%= favicon_link_tag 'favicon.ico' %>
   <%= stylesheet_link_tag 'blueprint/screen', :media => 'screen' %>
