--- a/app/views/user_mailer/forgot_password.html.erb
+++ b/app/views/user_mailer/forgot_password.html.erb
@@ -5,11 +5,10 @@
   </head>
   <body>
     <p>
-
-     Your new password is: <%= @pass %>.
-
-
-    
+      Your new password is: <%= @pass %>.    
+    </p>
+    <p>
+      Please try logging in again at: http://crunchalert.com/login.
     </p>
   </body>
 </html>
