--- a/app/views/user_mailer/forgot_password.text.erb
+++ b/app/views/user_mailer/forgot_password.text.erb
@@ -1,5 +1,4 @@
-
-Welcome to example.com
-===============================================
  
-Your new password is <%= @pass %>. 
+Your new password is <%= @pass %>.
+
+Please try logging in again at: http://crunchalert.com/login.
