--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,9 +1,8 @@
 
-Welcome to example.com
-===============================================
- 
-You have successfully signed up to example.com,
- 
-To login to the site, just follow this link: <%= @url %>.
- 
-Thanks for joining and have a great day!
+Thanks for joining CrunchAlert.
+
+You'll receive email alerts from us as soon as you add new CrunchBase profiles to your list on CrunchAlert.com. We track all the updates on every profile, so we give you a heads up whenever there's fresh news.
+
+You could also keep abreast of all the tech updates (fundings, acquisitions, new products and companies) on CrunchBase by receiving a daily or weekly news digest from us too.
+
+http://crunchalert.com
