--- a/app/views/users/forgot_password.html.erb
+++ b/app/views/users/forgot_password.html.erb
@@ -1,11 +1,10 @@
-
-
-<%= form_for(:forgot_password, :url => forgot_password_path) do |f| %>
-
-<h3>Forgotten password</h3>
-
-Email: <%= text_field "user","email" %><br/>
-
-<%= submit_tag 'Email password' %>
-
-<% end %>
+<div id="forget">
+  <%= form_for(:forgot_password, :url => forgot_password_path) do |f| %>
+  <div id="new-pass">Enter your email to receive a new password:</div>
+  <div class="user">
+    <%= text_field "user", "email", :title => "enter your email address" %>
+    <%= submit_tag 'Submit' %>
+  </div>
+  <% end %>
+</div>
+<div class="page-footer" id="password-footer"><%= render 'shared/footer' %></div>
