--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,9 +8,11 @@
     <%= link_to "Register", signup_path, :class => 'register-link' %> | <%= link_to "Login", login_path, :class => 'login-link' %>
   </div>
 <% else %>
+  <div class="blurb">
+    Email alerts on <a href="http://crunchbase.com" title="crunchbase.com" id="crunchbase-pic"><%= image_tag("crunchbase.png", :alt => "crunchbase") %></a> updates. Keep tabs on your favorite tech companies and people
+  </div>
   <div class="user-account">
-    <%= link_to "Account", edit_user_path(current_user) %>
-    <%= link_to "Logout", logout_path, :method => :delete %>
+    <%= link_to "Account", edit_user_path(current_user), :class => 'account-link' %> | <%= link_to "Logout", logout_path, :method => :delete %>
   </div>
 <% end %>
 </div>
