--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -16,6 +16,10 @@ body { font-family: Helvetica Neue, arial, helvetica, sans-serif; color: #333333
 .login a:link { text-decoration: none; }
 .login a:hover { text-decoration: underline; }
 
+.user-account { position: absolute; right: 0px; bottom: 0px; font-weight: bold; font-size: 1.25em; }
+.user-account a:link { text-decoration: none; }
+.user-account a:hover { text-decoration: underline; }
+
 
 /* center-container */
 
@@ -31,11 +35,10 @@ body { font-family: Helvetica Neue, arial, helvetica, sans-serif; color: #333333
 
 #popular { position: absolute; right: 0px; }
 #popular-alerts { margin-top: 40px; }
-.popular { margin-bottom: 30px; max-height: 100px; max-width: 250px; }
+.crunchalert-list { margin-bottom: 30px; max-height: 100px; max-width: 250px; }
 
 #recent { position:absolute; right: 0px; bottom: 0px; margin-bottom: 40px; }
 #recent-alerts { margin-top: 40px; }
-.recent { margin-bottom: 30px; max-height: 100px; max-width: 250px; }
 
 
 /* footer */
@@ -55,7 +58,7 @@ body { font-family: Helvetica Neue, arial, helvetica, sans-serif; color: #333333
 #about a:hover { text-decoration: underline; } 
 
 
-/* register/login/forgot-password page */
+/* register/login/forgot-password/account-settings page */
 
 #register { margin-top: 30px; font-size: 1.3em; padding-bottom: 55px; }
 legend { color: #DB0C09; margin-left: 15px; }
@@ -64,7 +67,7 @@ fieldset { border: none; text-align: right; width: 450px; }
 .user input[type=text] { border:1px solid #ccc; color:gray; text-align: center; font-size: 18px; width: 340px; }
 .user input[type=password] { border:1px solid #ccc; color:gray; font-size: 18px; width: 340px; }
 
-#sign-in  { margin-top: 30px; font-size: 1.3em; padding-bottom: 55px; }
+#sign-in  { margin-top: 30px; font-size: 1.3em; padding-bottom: 90px; }
 #sign-in legend { margin-left: 50px; }
 #sign-in a:hover { text-decoration: underline; color: #333333; }
 .sign-in input { height: 27px; margin-left: 10px; margin-bottom: 15px; }
@@ -74,6 +77,22 @@ fieldset { border: none; text-align: right; width: 450px; }
 #forget input[type=text] { margin-left: 20px; }
 #new-pass { font-size: 1.5em; margin-bottom: 20px; }
 #password-footer { position: relative; top: 35px; }
+
+#settings  { margin-top: 30px; font-size: 1.3em; padding-bottom: 40px; margin-bottom: 40px; }
+#settings legend { margin-left: 50px; }
+.settings { width: 500px; }
+.delete-account { text-decoration: none; color: #999999; font-size: 0.9em; position: relative; top: 20px; }
+#settings a:hover { text-decoration: underline; color: #333333; }
+
+
+/* user home page */
+
+
+
+
+
+
+
 
 
 /*
