--- a/app/views/pages/_news_form.html.erb
+++ b/app/views/pages/_news_form.html.erb
@@ -1,4 +1,5 @@
 <div id="crunchnews">
+  <span class="user-header">News Digest</span>
   <form id="form-crunchnews" method="post" name="crunchbase">
     <div id="news-check">
       <input id='news' name='news' type='checkbox' check value='true' /><input name='news' type='hidden' value='false'/><label for='news'>Receive our news digest with the latest tech news<br /> and deals from CrunchBase</label>
