add-crunchalert form

--- a/app/views/pages/_crunchbase_form.html.erb
+++ b/app/views/pages/_crunchbase_form.html.erb
@@ -1,5 +1,5 @@
 <div id="crunchbase-search">
-  <span class="user-header">Add CrunchAlerts</span>
+  <span class="user-header">Add CrunchAlert</span>
   <form id="form-crunchbase" method="post" name="crunchbase">
     <div id="loader"></div>
     <div id="crunchbase-name">
