--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -88,21 +88,29 @@ fieldset { border: none; text-align: right; width: 450px; }
 /* user homepage */
 
 #crunchnews { margin-top: 20px; height: 135px; width: 400px; border: solid 1px #C9C9C9; padding: 15px 0px 5px 15px; }
-#news-check { font-size: 1.2em; margin-top: 12px; }
+#news-check { font-size: 1.2em; margin-top: 35px; }
                                                          /* style fancy checkbox and radio buttons too */
 #news-check label { margin-left: 9px; position: relative; bottom: 2px; }
 #news-freq { font-size: 1.2em; position: relative; top: 17px; }
 #submit-crunchnews { position: relative; left: 17px;   }
 
-#crunchbase-search { margin-top: 35px; height: 120px; width: 500px; border: solid 1px #C9C9C9; padding: 15px 0px 15px 15px; }
-#form-crunchbase { font-size: 1.2em; font-weight: normal; margin-top: 5px; }
+#crunchbase-search { margin-top: 35px; height: 215px; width: 500px; border: solid 1px #C9C9C9; padding: 15px 0px 15px 15px; position: relative; }
+#form-crunchbase { font-size: 1.2em; font-weight: normal; margin-top: 50px; }
 #crunchbase-name input { border:1px solid #ccc; color:gray; text-align: center; font-size: 18px; width: 325px; margin-left: 5px; }
-#cbase-type { margin-top: 15px; }
+#cbase-type { margin-top: 25px; }
 #cbase-type input[type=submit] { margin-left: 15px; }
-.user-header { font-size: 1.4em; color: #DB0C09; font-weight: bold; }
+.user-header { position: absolute; font-size: 1.4em; color: #DB0C09; font-weight: bold; }
 
+#form-alert { font-size: 1.2em; }
+#form-img  { max-height: 100px; max-width: 250px; position: absolute; top: 20px; right: 40px; }
+#form-check { position: absolute; bottom: 85px; right: 40px; }
+#form-freq { position: absolute; bottom: 55px; right: 40px; }
+#form-submit { position: absolute; bottom: 20px; right: 40px; }
 
-
+#submit-url { font-size: 1.2em; position: absolute; top: 50px; left: 25px; margin-top: 15px; font-weight: bold; width: 425px; }
+#url { border:1px solid #ccc; color:gray; text-align: center; font-size: 18px; width: 460px; margin-left: 5px; margin-top: 20px; }
+#url-buttons { margin-top: 10px; position: absolute; right: 0px; }
+#url-cancel { margin-right: 25px; }
 
 
 
