--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,9 +25,12 @@
   <div class="alert-list">
     <% @alerts.each do |alert| %>
     <div class="crunchalert" id="<%= alert.content %>">
+
       <% name = alert.content.gsub(/[\s\.]/,'-') %>
       <a href=<%= "http://crunchbase.com/#{alert.content_type}/#{name}" %> title=<%= alert.content %>><%= image_tag(Picture.find_by_content(alert.content).url, :alt => alert.content, :class => "crunchalert-list") %></a>
-      <div class="edit_alert"><b>Edit</b></div>
+
+      <div class="edit_alert">Edit</div>
+
     </div>
     <% end %>
   </div>
