--- a/app/views/pages/_news_form.html.erb
+++ b/app/views/pages/_news_form.html.erb
@@ -1,11 +1,9 @@
 <div id="crunchnews">
   <span class="user-header">News Digest</span>
-  <form id="form-crunchnews" method="post" name="crunchbase">
+  <form id="form-crunchnews" method="post" name="crunchnews">
     <div id="news-check">
-      <input id='news' name='news' type='checkbox' check value='true' /><input name='news' type='hidden' value='false'/><label for='news'>Receive our news digest with the latest tech news<br /> and deals from CrunchBase</label>
     </div>
     <div id="news-freq">
-      <span style="font-weight:bold">Frequency:</span> <input type="radio" name="freq" value="true">Daily<input type="radio" name="freq" value="false">Weekly
       <input type="submit" id="submit-crunchnews" value="Submit">
     </div>
   </form>
